Removed extra li that was causing color contrast issues

--- a/docroot/themes/custom/uids_base/scss/components/menus/main-menu.scss
+++ b/docroot/themes/custom/uids_base/scss/components/menus/main-menu.scss
@@ -326,8 +326,7 @@
             }
           }
 
-          li.menu-item--active-trail,
-          li {
+          li.menu-item--active-trail {
             a {
               color: $secondary;
             }
